[project]
name = "netmap-backend"
version = "0.1.0"
description = "FastAPI backend for NetMap"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "argon2-cffi>=25.1.0",
  "cryptography>=48.0.1",
  "defusedxml>=0.7.1",
  "PyJWT>=2.10.0",
  "starlette>=1.3.1",
  "dnspython>=2.7.0",
  "reportlab>=4.4.1",
  "apprise>=1.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
